Revert "Az Előfizetés oldalból Tanulási útvonalak oldal lett"
This reverts commit 4137f36e1373485e0483bf74df65ad0de5966780.

--- a/static/page-elofizetes/index.html
+++ b/static/page-elofizetes/index.html
@@ -62,7 +62,7 @@
           <div class="col-md-12">
 
             <i class="decode-icon-viral-marketing wow tada"></i>
-            <h1>Képzési útvonalak</h1>
+            <h1>Előfizetések</h1>
 
           </div>
           <!-- col -->
@@ -73,6 +73,45 @@
     </div>
     <!-- page-header -->
 
+    <section class="full-section  half-image" id="section-1">
+      <div class="full-section-container">
+        <div class="container">
+
+          <br>
+          <br>
+
+          <div class="row">
+            <div class="col-lg-5">
+              <h1 class="mb-5">NetAcademia
+                <br>
+                <em>Certificate</em>
+              </h1>
+              <p>
+                <strong>A NetAcademia Certificate programunkban olyan szakmákat tanulhatsz, melyekkel akár távmunkában
+                  is dolgozhatsz, ezzel
+                  jelentősen növelve a munkakeresésed esélyeit! Mindegy, hogy Piripócson élsz, vagy a Bahamákon, velünk
+                  eljuthasz
+                  a következő szintre. Távmunkához távtanulás dukál!</strong>
+              </p>
+
+              <br>
+
+            </div>
+            <!-- col -->
+          </div>
+          <!-- row -->
+        </div>
+        <!-- container -->
+      </div>
+      <!-- full-section-container -->
+
+      <div class="half-image-right wow fadeInUp" style="background-image:url(assets/images/grad.svg);">
+        <img src="assets/images/grad.svg" alt="">
+      </div>
+      <!-- half-image-right -->
+
+    </section>
+    <!-- full-section-container -->
 
     <section class="full-section pb-0" id="section-2">
       <div class="full-section-container">
