--- a/static/page-elofizetes/index.html
+++ b/static/page-elofizetes/index.html
@@ -62,7 +62,7 @@
           <div class="col-md-12">
 
             <i class="decode-icon-viral-marketing wow tada"></i>
-            <h1>Előfizetések</h1>
+            <h1>Képzési útvonalak</h1>
 
           </div>
           <!-- col -->
