--- a/static/khakcio/index.html
+++ b/static/khakcio/index.html
@@ -20,7 +20,7 @@
 
   <!-- F_INSTAPAGE[dynamic_text_replacement] -->
   <!-- font injector -->
-  <link type="text/css" rel="stylesheet" media="screen, print" href="./index_files/css"><!-- end -->
+  <link type="text/css" rel="stylesheet" media="screen, print" href="./index_files/fonts.css"><!-- end -->
   <style type="text/css" media="screen">
     .page-element .btn,
     .page-element .contents,
