DEV-360 form beküldésre ürítés

--- a/static/page-oktato/index.html
+++ b/static/page-oktato/index.html
@@ -316,6 +316,7 @@
 
         success: function(response) {
           parent.$("body").trigger("successModal");
+          $("form input").val('');
         },
         error: function(error) {
           parent.$("body").trigger("failModal");
