--- a/static/khakcio/index.html
+++ b/static/khakcio/index.html
@@ -111,7 +111,7 @@
     return __a_o__[k] || v;
   }</script>
   <script type="text/javascript"
-          src="./index_files/pageserver.page2.es5.95605a9886a337aba4a0.bundle.js.letöltés"></script>
+          src="./index_files/pageserver.page2.es5.95605a9886a337aba4a0.bundle.js"></script>
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0" id="mobile-viewport">
 
@@ -121,7 +121,7 @@
     window.__variant = "A";
     window.__variant_custom_name = "" || "A";
     window.__is_tablet = false;
-    window.__page_domain = "//khmail.pagedemo.co";
+    window.__page_domain = "//www.netacademia.hu";
     window.__instapage_services = "//app.instapage.com";
     window.__instapage_proxy_services = "PROXY_SERVICES";
     window.__preview = false;
@@ -3517,7 +3517,7 @@
 
           </style>
           <div class="conversion_wrapper">
-            <a href="http://khmail.pagedemo.co/#page-block-h4xr70jjcvcyjfdvm0p2pgb9" class="on-page-scroll"
+            <a href="#page-block-h4xr70jjcvcyjfdvm0p2pgb9" class="on-page-scroll"
                style="width: 338px; height: 47px;" data-wid="79">
 
               <div class="btn submit-button button_submit dynamic-button   ">MEGRENDELEM</div>
