Ultimateakcio 404, helyette link to Business

--- a/static/page-elofizetes/index.html
+++ b/static/page-elofizetes/index.html
@@ -392,7 +392,7 @@
                       <b>Az előfizetés további részletei...</b>
                     </a>
                   </div>
-                  <a class="waves" href="https://www.netacademia.hu/ultimateakcio" target="_parent">
+                  <a class="waves" href="https://www.netacademia.hu/business" target="_parent">
                     <i class="fa fa-angle-right"></i>
                   </a>
                 </div>
