LegjobbaNAkat - elgépelés javítva

--- a/static/page-rolunk/index.html
+++ b/static/page-rolunk/index.html
@@ -163,7 +163,7 @@
 						<div class="owl-carousel process-steps">
 							<div class="item">
 								<h6>1998</h6>
-								<p class="mt-5"><small>Három fiatal informatikaoktató összeállásával megalakult a NetAcademia Oktatóközpont. Megalkotják a máig híres „A legjobbanakat tanítjuk” szlogent, ami közel 20 éven át "teljesített szolgálatot". A fiatal alapítók több nemzetközi és hazai díjat besöpörnek az oktatásmódszertan terén elért eredményeikért.</small></p>
+								<p class="mt-5"><small>Három fiatal informatikaoktató összeállásával megalakult a NetAcademia Oktatóközpont. Megalkotják a máig híres „A legjobbakat tanítjuk” szlogent, ami közel 20 éven át "teljesített szolgálatot". A fiatal alapítók több nemzetközi és hazai díjat besöpörnek az oktatásmódszertan terén elért eredményeikért.</small></p>
 
 							</div>
 							<!-- item -->
