--- a/static/khakcio/index.html
+++ b/static/khakcio/index.html
@@ -3489,7 +3489,7 @@
 
           </style>
           <div class="conversion_wrapper">
-            <a href="http://khmail.pagedemo.co/#page-block-h4xr70jjcvcyjfdvm0p2pgb9" class="on-page-scroll"
+            <a href="#page-block-h4xr70jjcvcyjfdvm0p2pgb9" class="on-page-scroll"
                style="width: 338px; height: 47px;" data-wid="79">
 
               <div class="btn submit-button button_submit dynamic-button   ">MEGRENDELEM</div>
