--- a/static/khakcio/index.html
+++ b/static/khakcio/index.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
 
-  <title>KH AKCIÓS OLDAL FINAL</title>
+  <title>KH akciós oldal</title>
 
   <meta name="description" content="">
   <meta name="keywords" content="">
