Khakcio date update

--- a/static/khakcio/index.html
+++ b/static/khakcio/index.html
@@ -3852,7 +3852,7 @@
 
           <div class="contents">
             <h1><p style="text-align: center;  "><b style=""><font color="#37465a">A 365 napra szóló előfizetési
-              csomagot augusztus 31-ig lehet aktiválni, ezután az új előfizetések már csak 180 napig lesznek
+              csomagot szeptember 30-ig lehet aktiválni, ezután az új előfizetések már csak 180 napig lesznek
               érvényesek!</font></b></p></h1>
           </div>
         </div>
