--- a/static/diakcsomag/index.html
+++ b/static/diakcsomag/index.html
@@ -139,7 +139,7 @@
           <div class="col-lg-8 my-auto">
             <h1 class="display-4 my-5">NetAcademia Diákcsomag</h1>
             <p class="lead">Unod, hogy 20 éve elavult, papíralapú jegyzetekből kell programozást tanulnod? Szeretnél játékot fejleszteni, weblapot varázsolni, videókat vágni? Azt mondod, bármit eladnál, csak egy webshop kellene? </p>
-            <p class="lead font-weight-bold">Több, mint 350 tanfolyam, mindösszesen 50 000 Ft-ért!</p>
+            <p class="lead font-weight-bold">Az összes tanfolyamunk, mindösszesen 50 000 Ft-ért!</p>
             <a class="btn mt-4 mb-5" href="#hogyan" role="button">Ide az előfizetésemmel!</a>
           </div>
           <div class="col-lg-4">
