--- a/static/diakcsomag/index.html
+++ b/static/diakcsomag/index.html
@@ -97,8 +97,31 @@
       -webkit-transition: all 0.2s;
       transition: all 0.2s;
       border: 2px solid orange;
-      color: #ffffff;
+      color:white;
+ 
     }
+
+    .btn2 {
+      position: relative;
+      z-index: 1;
+      padding: 15px 25px;
+      margin-right: 20px;
+      margin-bottom: 20px;
+      border: none;
+      border-radius: 0;
+      font-size: 14px;
+      font-weight: 700;
+      letter-spacing: 1.2px;
+      text-transform: uppercase;
+      cursor: pointer;
+      -webkit-transition: all 0.2s;
+      transition: all 0.2s;
+      border: 2px solid orange;
+
+ 
+    }
+
+
 
     .btn:hover {
       box-shadow: 0 4px 7px 0 rgba(0, 0, 0, 0.16), 0 3px 12px 0 rgba(0, 0, 0, 0.12);
@@ -108,6 +131,16 @@
       color: #ffffff;
 
     }
+
+    .btn2:hover {
+      box-shadow: 0 4px 7px 0 rgba(0, 0, 0, 0.16), 0 3px 12px 0 rgba(0, 0, 0, 0.12);
+      -webkit-transform: scale(1.05);
+      -ms-transform: scale(1.05);
+      transform: scale(1.05);
+      color: black;
+
+    }
+
 
     /*nav pills*/
 
@@ -328,7 +361,7 @@ Diákigazolvány száma: <input type="text" name="diak" required pattern="[0-9]{
 
         <br>
 
-    <input type=submit value=Megrendelem class="btn mt-4 mb-5">
+    <input type=submit value=Megrendelem class="btn2 mt-4 mb-5">
 
 </form>
           </div>
