--- a/static/diakcsomag/index.html
+++ b/static/diakcsomag/index.html
@@ -354,7 +354,7 @@
           </div>
           <div class="col-lg-8 my-auto">
             <h2 class="mb-5">Hogyan szerezhetem meg a Diákcsomagot?</h2>
-            <p class="lead">Keresd informatikatanárodat a promóciós kódokért, vagy írd be a lenti mezőbe a diákigazolványod számát, egy automatikus ellenőrzés után pedig már regisztráhatsz is!</p>
+            <p class="lead">Keresd informatikatanárodat a promóciós kódokért, vagy írd be a lenti mezőbe a diákigazolványod számát, ezután pedig már regisztráhatsz is!</p>
             <form action="https://app.netacademia.hu/Subscription/AddSimpleAddress/c3b6370c-05b5-4bd7-aae3-86a51043161b">
 
 Diákigazolvány száma: <input type="text" name="diak" required pattern="[0-9]{11}">
