--- a/static/diakcsomag/index.html
+++ b/static/diakcsomag/index.html
@@ -382,8 +382,13 @@
         <form action="https://app.netacademia.hu/Subscription/AddSimpleAddress/c3b6370c-05b5-4bd7-aae3-86a51043161b"
               id="diakcsomag-adatbekero">
 
-          Diákigazolvány száma:
-          <input type="text" name="diak" id="diak" required pattern="[0-9]{11}">
+          Diákigazolvány száma:   <br>
+          <input type="text" name="diakszam" id="diakszam" required pattern="[0-9]{11}">   <br>
+          Városod:   <br>
+           <input type="text" name="diakvaros" id="diakvaros" required> <br>
+          Iskolád:   <br>
+          <input type="text" name="diakiskola" id="diakiskola" required>
+          
 
           <br>
 
