--- a/static/diakcsomag/index.html
+++ b/static/diakcsomag/index.html
@@ -376,26 +376,69 @@
       </div>
       <div class="col-lg-8 my-auto">
         <h2 class="mb-5">Hogyan szerezhetem meg a Diákcsomagot?</h2>
-        <p class="lead">Keresd informatikatanárodat a promóciós kódokért, vagy írd be a lenti mezőbe a diákigazolványod
-          számát, ezután pedig már regisztráhatsz is!</p>
 
-        <form action="https://app.netacademia.hu/Subscription/AddSimpleAddress/c3b6370c-05b5-4bd7-aae3-86a51043161b"
-              id="diakcsomag-adatbekero">
+        <div class="row">
 
-          Diákigazolvány száma: <br>
-          <input type="text" name="diakszam" id="diakszam" required pattern="[0-9]{11}"> <br>
-          Városod: <br>
-          <input type="text" name="diakvaros" id="diakvaros" required> <br>
-          Iskolád: <br>
-          <input type="text" name="diakiskola" id="diakiskola" required>
+          <div class="col-12 col-md">
+
+            <form action="https://app.netacademia.hu/Subscription/AddSimpleAddress/c3b6370c-05b5-4bd7-aae3-86a51043161b"
+                  id="diakcsomag-adatbekero">
+              <p class="lead small">Keresd informatikatanárodat a promóciós kódokért, vagy írd be a lenti mezőbe a
+                diákigazolványod számát, ezután pedig már regisztráhatsz is!</p>
+
+              Diákigazolvány száma: <br>
+              <input type="text" name="diakszam" id="diakszam" required pattern="[0-9]{11}"> <br>
+              Városod: <br>
+              <input type="text" name="diakvaros" id="diakvaros" required> <br>
+              Iskolád: <br>
+              <input type="text" name="diakiskola" id="diakiskola" required>
 
 
-          <br>
+              <br>
 
-          <input type="submit" value="Megrendelem" class="btn2 mt-4 mb-5">
+              <input type="submit" value="Megrendelem" class="btn2 mt-4">
 
-        </form>
+            </form>
+          </div>
 
+          <div class="d-none d-md-block col-md-auto display-4">
+            VAGY!
+          </div>
+
+          <div class="col-12 col-md">
+            <form id="diaktanar-adatbekero">
+
+              <p class="lead small">Legyél te is oktató! Készíts egy frankó tananyagot nekünk arról, ami a
+                szakterületed, és
+                mi
+                megjutalmazunk
+                egy díjmentes NetAcademia Diákcsomaggal.</p>
+
+              Név: <br>
+              <input type="text" name="nev" id="nev" required> <br>
+              E-mail: <br>
+              <input type="email" name="email" id="email" required> <br>
+              Mobil: <br>
+              <input type="text" name="mobil" id="mobil" required>
+
+              <br>
+
+              <input type="submit" value="Jelentkezek oktatónak" class="btn2 mt-4">
+
+              <div class="success-message alert alert-success small" role="alert">
+                Köszönjük, jelentkezésed rögzítettük!
+              </div>
+
+              <div class="fail-message alert alert-danger small" role="alert">
+                <p>Hiba történt a beküldés során!</p>
+                <p>Kérlek jelezd ezt kollégáink felé, hogy javíthassák.</p>
+                <p>Köszönjük!</p>
+              </div>
+
+            </form>
+          </div>
+
+        </div>
       </div>
     </div>
 
