--- a/static/diakcsomag/index.html
+++ b/static/diakcsomag/index.html
@@ -368,9 +368,9 @@
 </section>
 <!-- Optional JavaScript -->
 
-<section class="py-5 section-2" id=hogyan>
-  <div class="container py-3">
-    <div class="row">
+<section class="py-5 section-2" id="hogyan">
+  <div class="container py-5">
+    <div class="row py-5">
       <div class="col-lg-4">
         <img src="diak.png" alt="" class="img-fluid">
       </div>
@@ -379,7 +379,7 @@
 
         <div class="row">
 
-          <div class="col-12 col-md">
+          <div class="col-12 col-xl">
 
             <form action="https://app.netacademia.hu/Subscription/AddSimpleAddress/c3b6370c-05b5-4bd7-aae3-86a51043161b"
                   id="diakcsomag-adatbekero">
@@ -401,11 +401,11 @@
             </form>
           </div>
 
-          <div class="d-none d-md-block col-md-auto display-4">
+          <div class="col-12 col-xl-auto display-4 mb-4">
             VAGY!
           </div>
 
-          <div class="col-12 col-md">
+          <div class="col-12 col-xl">
             <form id="diaktanar-adatbekero">
 
               <p class="lead small">Legyél te is oktató! Készíts egy frankó tananyagot nekünk arról, ami a
@@ -425,11 +425,11 @@
 
               <input type="submit" value="Jelentkezek oktatónak" class="btn2 mt-4">
 
-              <div class="success-message alert alert-success small" role="alert">
+              <div class="success-message alert alert-success small" role="alert" style="display: none">
                 Köszönjük, jelentkezésed rögzítettük!
               </div>
 
-              <div class="fail-message alert alert-danger small" role="alert">
+              <div class="fail-message alert alert-danger small" role="alert" style="display: none">
                 <p>Hiba történt a beküldés során!</p>
                 <p>Kérlek jelezd ezt kollégáink felé, hogy javíthassák.</p>
                 <p>Köszönjük!</p>
