--- a/static/diakcsomag/index.html
+++ b/static/diakcsomag/index.html
@@ -167,7 +167,7 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-8 my-auto">
-        <h1 class="display-4 my-5">NetAcademia Diákcsomag</h1>
+        <h1 class="display-4 my-5">NetAcademia Ultimate előfizetés diákáron!</h1>
         <p class="lead">Unod, hogy 20 éve elavult, papíralapú jegyzetekből kell programozást tanulnod? Szeretnél játékot
           fejleszteni, weblapot varázsolni, videókat vágni? Azt mondod, bármit eladnál, csak egy webshop kellene? </p>
         <p class="lead font-weight-bold">Az összes tanfolyamunk, mindösszesen 50 000 Ft-ért!</p>
@@ -182,7 +182,7 @@
 
 <section class="">
   <div class="container py-5">
-    <h1 class="my-5 pb-5 text-center">Mi van a csomagomban?</h1>
+    <h1 class="my-5 pb-5 text-center">Minden ami az Ultimate előfizetésünkben! Néhány példa!</h1>
 
     <div class="mb-5 pb-3">
       <ul class="nav  mb-3" id="pills-tab" role="tablist">
@@ -375,7 +375,7 @@
         <img src="diak.png" alt="" class="img-fluid">
       </div>
       <div class="col-lg-8 my-auto">
-        <h2 class="mb-5">Hogyan szerezhetem meg a Diákcsomagot?</h2>
+        <h2 class="mb-5">Hogyan szerezhetem meg Ultimate előfizetésemet diákáron?</h2>
         <p class="lead">Add meg a lenti sorokban adataid, ezután pedig már regisztráhatsz is!</p>
 
         <form action="https://app.netacademia.hu/Subscription/AddSimpleAddress/c3b6370c-05b5-4bd7-aae3-86a51043161b"
