--- a/static/diakcsomag/index.html
+++ b/static/diakcsomag/index.html
@@ -182,7 +182,7 @@
 
 <section class="">
   <div class="container py-5">
-    <h1 class="my-5 pb-5 text-center">Minden ami az Ultimate előfizetésünkben! Néhány példa!</h1>
+    <h1 class="my-5 pb-5 text-center">Minden ami az Ultimate előfizetésünkben!</h1>
 
     <div class="mb-5 pb-3">
       <ul class="nav  mb-3" id="pills-tab" role="tablist">
@@ -376,7 +376,7 @@
       </div>
       <div class="col-lg-8 my-auto">
         <h2 class="mb-5">Hogyan szerezhetem meg Ultimate előfizetésemet diákáron?</h2>
-        <p class="lead">Add meg a lenti sorokban adataid, ezután pedig már regisztráhatsz is!</p>
+        <p class="lead">Add meg a lenti sorokban adataid, ezután pedig már regisztrálhatsz is!</p>
 
         <form action="https://app.netacademia.hu/Subscription/AddSimpleAddress/c3b6370c-05b5-4bd7-aae3-86a51043161b"
               id="diakcsomag-adatbekero">
