oktató kereső oldal

--- a/static/page-oktato/index.html
+++ b/static/page-oktato/index.html
@@ -62,7 +62,7 @@
   <div id="page-header">
 
     <div class="ken-burns"
-         style="background-image:url(assets/images/oktatokereso-bg.svg); background-position: center; height:400px;"></div>
+         style="background-image:url(assets/images/indulo-bg.svg); background-position: center; height:400px;"></div>
 
     <div class=""></div>
 
@@ -70,7 +70,7 @@
       <div class="row">
         <div class="col-md-12">
 
-          <h1>Oktass te is online a NetAcademiánál!</h1>
+          <h1>Oktass te is a NetAcademiánál!</h1>
 
         </div>
         <!-- col -->
@@ -84,62 +84,69 @@
 
 
     <div class="container">
-      <div class="row">
-        <div class="col-lg-4 mr-xl-auto my-auto">
+      <div class="row pb-3">
+        <div class="col-lg-12 mr-xl-auto my-auto">
           <div class="headline no-margin-bottom">
 
-            <h3>Milyen területre keresünk oktatót?</h3>
+            <h3>Oktatókat keresünk!</h3>
 
           </div><!-- headline -->
           <br>
 
-          <p>Programozás, üzemeltetés, képszerkesztés, Excel, ethical hacking, mobilfejlesztés, adatelemzés,
-            felhőzés,
-            SQL, IoT, Big Data, AI, machine learning, digitális marketing stb. Írd meg miben vagy jó, és ha
-            felkelted az
-            érdeklődésünket, hamarabb az oktatói székben találod magad, mint hinnéd.</p>
+          <p>A NetAcademia egy online oktatóközpont, tanfolyamainkat elsősorban videós formában kínáljuk.
+            Új és új témakörök oktatásához folyamatosan keresünk oktatókat, illetve egy-egy terület szakembereit.
+            Néhány példa, ilyen videókat készítenek az oktatóink: </p>
 
         </div><!-- col -->
-        <div class="col-lg-7">
 
-          <p><img class="wow fadeInRight" src="assets/images/online-oktatas.svg" alt=""></p>
-
-        </div><!-- col -->
       </div><!-- row -->
+
+      <div class="row mt-5">
+        <div class="col-lg-4 mb-4 mb-lg-0">
+          <div class="embed-responsive embed-responsive-16by9">
+            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/cJMsEsB8hnQ" allowfullscreen></iframe>
+          </div>
+        </div>
+        <div class="col-lg-4 mb-4 mb-lg-0">
+          <div class="embed-responsive embed-responsive-16by9">
+            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/L7VLjI1XEhQ" allowfullscreen></iframe>
+          </div>
+        </div>
+        <div class="col-lg-4 mb-4 mb-lg-0">
+          <div class="embed-responsive embed-responsive-16by9">
+            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/ZXDO-_UtrL4" allowfullscreen></iframe>
+          </div>
+        </div>
+      </div>
     </div><!-- container -->
 
   </section><!-- full-section-container -->
 
-  <section>
+  <section id="section-10" class="pb-0">
     <div class="container">
-      <div class="row">
-        <div class="col-xl-offset-4 col-lg-7 mb-5">
+      <div class="row py-3">
+        <div class="col-lg-7 mb-5 text-center">
 
-          <div id="screens-section">
-
-            <img class="wow zoomIn" src="assets/images/app.svg" width="300" alt="">
-            <img class="wow zoomIn" data-wow-delay="0.2s" src="assets/images/marketing.svg" width="300"
-                 alt="">
-            <img class="wow zoomIn" data-wow-delay="0.1s" src="assets/images/tanar.svg" width="300" alt="">
-
-          </div><!-- smartphones-section -->
+            <img class="wow zoomIn" src="assets/images/oktato.svg" width="400" alt="">
 
         </div><!-- col -->
-        <div class="col-lg-5 col-xl-4 my-auto">
+        <div class="col-lg-5 my-auto">
 
           <div class="headline no-margin-bottom">
 
-            <h3>Mit kell tudni az online oktatásról?</h3>
+            <h3>Mi kell hozzá? Az online oktatás sikerreceptje:</h3>
 
           </div><!-- headline -->
 
           <br><br>
 
-          <p>Ugyanolyan, mint a tantermi oktatás, csak teljesen más. Ugyanúgy vannak hallgatók, csak többen
-            vannak és
-            nincsenek ott. Ugyanúgy időben kell kezdeni az előadást, de te mondhatod meg mikor kezdődjön.
-            Ugyanúgy
-            készülnöd kell az előadásra, de a tananyagot nem mi adjuk, hanem neked kell összeállítani.</p>
+          <ul class="text-dark">
+            <li>1 db számítógép</li>
+            <li>1 db mikrofon vagy füles</li>
+            <li>1 db képernyőrögzítő program</li>
+            <li>1 db kapós témakör</li>
+            <li>1 db lendületes, vidám, hozzáértő, lelkes szakember</li>
+          </ul>
 
           <br><br>
 
@@ -149,14 +156,7 @@
     </div><!-- container -->
   </section>
 
-  <section class="full-section" id="section-10">
-
-    <div class="multilayer-parallax">
-
-      <div class="parallax-layer" data-stellar-ratio="1.2" data-x="60%" data-y="10%"><img
-        src="assets/images/oktato-play.svg" width="400" alt=""></div>
-
-    </div><!-- parallax-multilayer -->
+  <section class="full-section">
 
     <div class="full-section-container">
 
@@ -166,38 +166,100 @@
 
             <div class="headline no-margin-bottom">
 
-              <h3>Mit biztosítunk mi a képzéshez?</h3>
+              <h3>No PPT, no blabla, no problem!</h3>
 
             </div><!-- headline -->
 
             <br>
 
-            <p>Technológiai támogatás a képzés előtt, alatt és után. Szakmai segítséget a tananyag
-              összeállításához.
-              Marketinget, hogy minél többen kövessék az előadásaidat.</p>
+            <p>Oktatásunk abszolút gyakorlatorientált.
+              Megfogjuk a Visual Studiót vagy a Photoshopot vagy az Exchanget, és létrehozunk, alkotunk vele valamit “a kamerák keressztüzében”. Tőled is ezt fogjuk kérni. Ragadd meg a PowerBI-t a két szarvánál, és nyomd le a földre!
+              Ha ehelyett elméleti blablát készítesz, vissza fogjuk dobni :-)</p>
+
+              <p>Kódot a Visual Studióban, IP-címet a parancssorban, fotót a Photoshopban mutatunk meg. Cipőt a cipőboltból!</p>
 
             <br>
 
-            <div class="headline no-margin-bottom">
-
-              <h3>Mit várunk tőled?</h3>
-
-            </div><!-- headline -->
-
-            <br>
-
-            <p>Alapos felkészültséget, sok sok lelkesedést, pontosságot, megbízhatóságot és egy csipet
-              jókedvet :)</p>
-
-            <br>
           </div><!--col -->
+
+          <div class="col-6 pl-5 d-none d-lg-block">
+            <img src="assets/images/oktato-play.svg" width="400" alt="" style="margin-bottom: -400px;">
+          </div>
         </div><!-- row -->
       </div><!-- container -->
 
     </div><!-- full-section-container -->
   </section><!-- full-section -->
 
-  <section class="full-section parallax" id="section-6" data-stellar-background-ratio="0.3">
+  <section id="section-10">
+    <div class="container">
+      <div class="row">
+
+        <div class="col-md-6 pr-4">
+
+          <div class="headline no-margin-bottom">
+
+            <h3>A videókészítés két szabálya</h3>
+          </div>
+
+          <br>
+
+          <ol class="text-dark">
+            <li>Egy videó maximum egy gondolatot tartalmazhat, és maximum 4-5 perc hosszúságú.</li>
+            <li>Ha egy videó ennél hosszabb, az első szabály lép életbe.</li>
+          </ol>
+
+          <p>Miért? Mert a mai fiatalok (és öregek) ehhez vannak szokva.
+            Napközben százszor néznek rövid információkat hírportálokon és social appokban, de szinte soha nincs idejük leülni 5-6 órát tanulni.
+            A statisztikákban szépen látszik, hogy öt percnél durván letörik a nézettség. Ott vágnunk kell.</p>
+
+          <br>
+          </div><!-- headline -->
+
+          <div class="col-lg-6 align-self-end">
+
+            <div class="headline no-margin-bottom">
+
+              <h3>Hosszabb tanfolyamok készítése</h3>
+
+            </div><!-- headline -->
+
+            <br>
+
+            <p>Mit csinálunk, ha egy témakör valójában 20-30 órás? Egyszerű: 5 perces blokkok sorozatára kell bontani.
+              Ez nemcsak a megtekintést, hanem a navigációt és a keresést is megkönnyíti.</p>
+
+            <br>
+
+          </div><!-- col -->
+          <br>
+        </div><!--col -->
+      </div><!-- row -->
+    </div><!-- container -->
+  </section>
+
+  <section>
+    <div class="container py-5">
+      <div class="row text-center py-5">
+    <div class="col-10 mx-auto">
+
+      <div class="headline no-margin-bottom">
+
+        <h3>Milyen területre keresünk oktatót?</h3>
+
+      </div><!-- headline -->
+
+      <br>
+
+      <p>Programozás, üzemeltetés, képszerkesztés, Excel, ethical hacking, mobilfejlesztés, adatelemzés, felhőzés, SQL, IoT, Big Data, AI,
+        machine learning, digitális marketing stb. Írd meg miben vagy jó, és induljunk el!</p>
+
+    </div><!-- col -->
+    </div>
+    </div>
+  </section>
+
+  <section class="full-section parallax" id="section-10" data-stellar-background-ratio="0.3">
     <div class="full-section-container">
 
       <div class="container">
