előfizetés oldal - ultimate akció

--- a/static/page-elofizetes/index.html
+++ b/static/page-elofizetes/index.html
@@ -71,6 +71,71 @@
       </div>
       <!-- page-header -->
 
+      <section id="section-6">
+
+        <div class="container mt-5 mt-lg-0">
+          <div class="row">
+            <div class="col text-center mb-4">
+
+              <div class="headline no-margin-bottom pb-3">
+
+                <h3>December 20-ig ismét elérhető Ultimate előfizetésünk!</h3>
+
+              </div>
+              <!-- headline -->
+
+            </div>
+            <!-- col -->
+          </div>
+          <!-- row -->
+        </div>
+        <!-- container -->
+
+        <div class="container">
+          <div class="row">
+            <div class="col-12 col-lg-8">
+
+              <br>
+
+              <h5><b>Jövőre 200 tanfolyammal kevesebb tanfolyammal kevesebb lesz az előfizetésben, mint idén!</b></h5>
+              <p>A csomagból többek között kikerülnek az <b>Ethical Hacking, CISSP, .Net programozás, Java fejlesztés, Angular</b> képzéseink.</p>
+              <p>Hihetetlen akcióval készülünk az ég végére: aki december 20-ig előfizet, az még hozzáfér az összes, 350-nél is több tanfolyamunkhoz az előfizetése végéig!</p>
+              <p><b>December 20 után az egyedi tanfolyamok ismét a saját áraikon lesznek kaphatók.</b> Néhány kiragadott példa a tanfolyamárakra:</p>
+
+              <ul class="list-unstyled font-weight-bold text-dark">
+                <li>
+                  CISSP 499 000 Ft,
+                </li>
+                <li>
+                  Windows Admin 215 000 Ft,
+                </li>
+                <li>
+                  .net fejlesztés C#-nyelven 215 000 Ft
+                </li>
+              </ul>
+
+              <p>A bejelentés mindhárom előfizetéstípusra vonatkozik: Business, Ultimate és Cafeteria. </p>
+
+              <br>
+
+              <p>
+                <a class="btn btn-default btn-outline waves waves-dark" href="https://app.netacademia.hu/subscription/create" target="_parent">Megveszem
+                  <i class="decode-icon-cursor"></i>
+                </a>
+              </p>
+
+            </div>
+
+            <div class="col-12 col-lg-4">
+              <img src="assets/images/ultimate.png" class="" alt="">
+            </div>
+
+          </div>
+          <!-- row -->
+        </div>
+        <!-- container -->
+      </section>
+
       <section class="full-section pb-0" id="section-7">
         <div class="full-section-container">
 
@@ -439,7 +504,7 @@
       <section id="section-6">
 
 
-        <div class="container">
+        <div class="container mt-5 mt-xl-0">
           <div class="row pb-5">
             <!-- col -->
             <div class=" text-center">
