--- a/static/page-elofizetes/index.html
+++ b/static/page-elofizetes/index.html
@@ -97,7 +97,7 @@
 
               <br>
 
-              <h5><b>Jövőre 200 tanfolyammal kevesebb tanfolyammal kevesebb lesz az előfizetésben, mint idén!</b></h5>
+              <h5><b>Jövőre 200 tanfolyammal kevesebb kevesebb lesz az előfizetésben, mint idén!</b></h5>
               <p>A csomagból többek között kikerülnek az <b>Ethical Hacking, CISSP, .Net programozás, Java fejlesztés, Angular</b> képzéseink.</p>
               <p>Hihetetlen akcióval készülünk az ég végére: aki december 20-ig előfizet, az még hozzáfér az összes, 350-nél is több tanfolyamunkhoz az előfizetése végéig!</p>
               <p><b>December 20 után az egyedi tanfolyamok ismét a saját áraikon lesznek kaphatók.</b> Néhány kiragadott példa a tanfolyamárakra:</p>
